--- a/public/resume.html
+++ b/public/resume.html
@@ -43,7 +43,7 @@
         <p><strong>Address:</strong> Saitama-shi, 338-8570, Japan</p>
         <p><strong>Phone:</strong> +81 80 5069 4762</p>
         <p><strong>Email:</strong> bricealibyilingiro@gmail.com</p>
-        <p><strong>LinkedIn:</strong> <a href="https://linkedin.com/in/byiringiro-brice-ali">linkedin.com/in/byiringiro-brice-ali</a></p>
+        <p><strong>LinkedIn:</strong> <a href="http://linkedin.com/in/brice-ali-byiringiro-ab1182254">linkedin.com/in/byiringiro-brice-ali</a></p>
     </div>
 
     <h2>Profile</h2>
