--- a/index.html
+++ b/index.html
@@ -3,19 +3,31 @@
     <head>
         <meta charset="UTF-8">
         <title>Brice Portfolio</title>
+        <link href="./styles.css" rel="stylesheet"/>
     </head>
+    <header>
+        <div class="profile picture">
+            <img src="./assets/images/brice.png" height="100" alt="Brice's profile picture"/>
+        </div>
+        <div class="title">
+            <h1>BYIRINGIRO BRICE ALI</h1>
+        </div>
+        <div class="top corner">
+            <a class="link" href="./public/about.html">About Me</a>
+            <a class="link" href="./public/academic.html">Academic</a>
+            <a class="link" href="./public/resume.html">Resume</a>
+            <a class="link" href="./public/contact.html">Contact Me</a>
+        </div>
+        
+    </header>
     <body>
-        <h1>BYIRINGIRO BRICE ALI</h1>
-
-        <hr />
-        <hr />
         <h2>Welcome to my personal portfolio</h2>
-        <img src="./assets/images/brice.png" height="100" alt="Brice's profile picture"/>
-        <p>Hi, I'm BYIRINGIRO BRICE ALI, a civil engineering student at Saitama University in Japan. Originally from Rwanda, I’m passionate about civil engineering, tech and sports. I play basketball in my free time, and I’m a fan of both soccer and basketball. My favorite music includes afrobeats, Rwandan pop and hip-hop, and recently, arbantone.</p>
-        <hr />
-        <a href="./public/about.html">About Me</a><br />
-        <a href="./public/academic.html">Academic</a><br />
-        <a href="./public/resume.html">Resume</a><br />
-        <a href="./public/contact.html">Contact Me</a>
+        <p>Hi, I'm BYIRINGIRO BRICE ALI, a civil engineering student at Saitama University in Japan. 
+            Originally from Rwanda, I’m passionate about civil engineering, tech and sports. 
+            I play basketball in my free time, and I’m a fan of both soccer and basketball. 
+            My favorite music includes afrobeats, Rwandan pop and hip-hop, and recently, arbantone.</p>
     </body>
+    <footer>
+        <p>@ Copyright BYIRINGIRO. 2024</p>
+    </footer>
 </html>
