--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <section id="front-page">
             <div class="container front-page">
                 <div class="">
-                    <img src="./images/bricepp.jpg" class="profile-img ">
+                    <img src="./assets/images/bricepp.jpg" class="profile-img ">
                 </div>
                 <div class="pb-3">
                     <p class="lead">Hi, I am Brice! </br>
@@ -19,10 +19,10 @@
                     </p>
                 </div>
                 <div class="d-flex gap-2 pb-5">
-                    <div><a href="https://www.facebook.com/brice.byilingiro/"><img class="facebook" src="./images/facebook.svg" height="30"></a></div>
-                    <div><a href="https://www.linkedin.com/in/brice-ali-byiringiro-ab1182254/"><img class="linkedin" src="./images/linkedin.svg" height="30"></a></div>
-                    <div><a href="https://www.instagram.com/brice_ali121/"><img class="instagram" src="./images/instagram.svg" height="30"></a></div>
-                    <div><a href="https://github.com/Brice-art"><img class="github" src="./images/github.svg" height="30"></a></div>
+                    <div><a href="https://www.facebook.com/brice.byilingiro/"><img class="facebook" src="./assets/images/facebook.svg" alt="facebook icon" height="30"></a></div>
+                    <div><a href="https://www.linkedin.com/in/brice-ali-byiringiro-ab1182254/"><img class="linkedin" src="./assets/images/linkedin.svg" alt="linkedin icon" height="30"></a></div>
+                    <div><a href="https://www.instagram.com/brice_ali121/"><img class="instagram" src="./assets/images/instagram.svg" alt="instagram icon" height="30"></a></div>
+                    <div><a href="https://github.com/Brice-art"><img class="github" src="./assets/images/github.svg" alt="github icon" height="30"></a></div>
                 </div>
             </div>
         </section>
@@ -30,7 +30,7 @@
             <div class="container col-xxl-8 pb-5">
                 <div class="row flex-lg-row-reverse g-5 align-items-center">
                     <div class="col-12 col-sm-10 col-lg-6">
-                        <img src="./images/bricethep.JPG" class="d-block d-md-flex img-fluid" alt="brice writing codes" loading="lazy" width="100%">
+                        <img src="./assets/images/bricethep.JPG" class="d-block d-md-flex img-fluid" alt="brice writing codes" loading="lazy" width="100%">
                     </div>
                     <div class="col-lg-6">
                         <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-4 text-uppercase">
@@ -56,7 +56,7 @@
             <div class="container col-xxl-8">
                 <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
                     <div class="col-10 col-sm-8 col-lg-6">
-                        <img src="./images/antelope.jpeg" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700" height="500" loading="lazy">
+                        <img src="./assets/images/antelope.jpeg" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700" height="500" loading="lazy">
                     </div>
                     <div class="col-lg-6">
                         <p class="lead">I am from Rwanda, a country known for its beautiful landscapes and innovative spirit. After completing high school, I made the bold decision to move to Japan to pursue my university education. To adapt to my new environment, I dedicated a year to studying Japanese at a language school. This not only helped me in my daily life but also allowed me to gain a deeper understanding of Japanese culture and traditions. After completing my language studies, I enrolled at Saitama University, where I majored in civil engineering. During my studies, I learned about designing and maintaining infrastructure, which plays a critical role in improving people’s lives.</p>
@@ -65,7 +65,7 @@
                 </div>
                 <div class="row flex-row- align-items-center g-5 py-5">
                     <div class="col-10 col-sm-8 col-lg-6">
-                        <img src="./images/fujimountain.jpg" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700" height="500" loading="lazy">
+                        <img src="./assets/images/fujimountain.jpg" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700" height="500" loading="lazy">
                     </div>
                     <div class="col-lg-6">
                         <p class="lead">While I enjoyed studying civil engineering, I realized that I am someone who loves exploring new fields and learning diverse skills. This curiosity led me to discover the world of technology and programming. I was fascinated by how technology can solve complex problems and create innovative solutions. Intrigued by this field, I decided to start teaching myself how to code. It has been a challenging but rewarding journey, and I am excited about the possibility of building a future career in the tech industry. You can find more details about my background and interests <a href="./public/about me.html">here.</a></p>
@@ -79,7 +79,7 @@
                 <div class="row g-4 py-5 row-cols-1 row-cols-lg-2">
                     <div class="feature col">
                         <div class="feature-icon d-inline-flex align-items-center justify-content-center bg-gradient fs-2 mb-3">
-                            <img src="./images/programming.png" height="50">
+                            <img src="./assets/images/programming.png" height="50">
                         </div>
                         <h3 class="fs-2 text-body-emphasis">Programming</h3>
                         <p class="lead">I have experience with programming languages such as HTML5, python, and JavaScript.</p>
@@ -87,7 +87,7 @@
                     </div>
                     <div class="feature col">
                         <div class="feature-icon d-inline-flex align-items-center justify-content-center bg-gradient fs-2 mb-3">
-                            <img src="./images/manager.png" height="50">
+                            <img src="./assets/images/manager.png" height="50">
                         </div>
                         <h3 class="fs-2 text-body-emphasis">Civil Engineering</h3>
                         <p class="lead">Proficiency in structural analysis, design for civil engineering projects, and research in materials strength.</p>
@@ -95,7 +95,7 @@
                     </div>
                     <div class="feature col">
                         <div class="feature-icon d-inline-flex align-items-center justify-content-center bg-gradient fs-2 mb-3">
-                            <img src="./images/rubik.png" height="50">
+                            <img src="./assets/images/rubik.png" height="50">
                         </div>
                         <h3 class="fs-2 text-body-emphasis">Problem-solving</h3>
                         <p class="lead">Analyzing the root cause of a problem and developing effective solutions.</p>
@@ -103,7 +103,7 @@
                     </div>
                     <div class="feature col">
                         <div class="feature-icon d-inline-flex align-items-center justify-content-center bg-gradient fs-2 mb-3">
-                            <img src="./images/brainstorm.png" height="50">
+                            <img src="./assets/images/brainstorm.png" height="50">
                         </div>
                         <h3 class="fs-2 text-body-emphasis">Team Collaboration</h3>
                         <p class="lead">I enjoy collaborating effectively with diverse teams to achieve project goals.</p>
@@ -123,10 +123,10 @@
                     </div>
               
                     <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-                        <li class="ms-3"><a href="https://www.facebook.com/brice.byilingiro/"><img class="facebook" src="./images/facebook.svg" height="30"></a></li>
-                        <li class="ms-3"><a href="https://www.linkedin.com/in/brice-ali-byiringiro-ab1182254/"><img class="linkedin" src="./images/linkedin.svg" height="30"></a></li>
-                        <li class="ms-3"><a href="https://www.instagram.com/brice_ali121/"><img class="instagram" src="./images/instagram.svg" height="30"></a></li>
-                        <li class="ms-3"><a href="https://github.com/Brice-art"><img class="github" src="./images/github.svg" height="30"></a></li>
+                        <li class="ms-3"><a href="https://www.facebook.com/brice.byilingiro/"><img class="facebook" src="./assets/images/facebook.svg" height="30"></a></li>
+                        <li class="ms-3"><a href="https://www.linkedin.com/in/brice-ali-byiringiro-ab1182254/"><img class="linkedin" src="./assets/images/linkedin.svg" height="30"></a></li>
+                        <li class="ms-3"><a href="https://www.instagram.com/brice_ali121/"><img class="instagram" src="./assets/images/instagram.svg" height="30"></a></li>
+                        <li class="ms-3"><a href="https://github.com/Brice-art"><img class="github" src="./assets/images/github.svg" height="30"></a></li>
                     </ul>
                 </footer>
               </div>
