--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                         <img src="./assets/images/fujimountain.jpg" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700" height="500" loading="lazy">
                     </div>
                     <div class="col-lg-6">
-                        <p class="lead">While I enjoyed studying civil engineering, I realized that I am someone who loves exploring new fields and learning diverse skills. This curiosity led me to discover the world of technology and programming. I was fascinated by how technology can solve complex problems and create innovative solutions. Intrigued by this field, I decided to start teaching myself how to code. It has been a challenging but rewarding journey, and I am excited about the possibility of building a future career in the tech industry. You can find more details about my background and interests <a href="./public/about me.html">here.</a></p>
+                        <p class="lead">While I enjoyed studying civil engineering, I realized that I am someone who loves exploring new fields and learning diverse skills. This curiosity led me to discover the world of technology and programming. I was fascinated by how technology can solve complex problems and create innovative solutions. Intrigued by this field, I decided to start teaching myself how to code. It has been a challenging but rewarding journey, and I am excited about the possibility of building a future career in the tech industry. You can find more details about my background and interests <a href="./public/about.html">here.</a></p>
                     </div>
                 </div>
             </div>
