--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <div class="d-flex gap-2 pb-5">
                     <div><a href="https://www.facebook.com/brice.byilingiro/"><img class="facebook" src="./assets/images/facebook.svg" alt="facebook icon" height="30"></a></div>
                     <div><a href="https://www.linkedin.com/in/brice-ali-byiringiro-ab1182254/"><img class="linkedin" src="./assets/images/linkedin.svg" alt="linkedin icon" height="30"></a></div>
-                    <div><a href="https://www.instagram.com/brice_ali121/"><img class="instagram" src="./assets/images/instagram.svg" alt="instagram icon" height="30"></a></div>
+                    <div><a href="https://www.instagram.com/brice_ali121/"><img class="instagram" src="./assets/images/instagram.png" alt="instagram icon" height="30"></a></div>
                     <div><a href="https://github.com/Brice-art"><img class="github" src="./assets/images/github.svg" alt="github icon" height="30"></a></div>
                 </div>
             </div>
@@ -125,7 +125,7 @@
                     <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
                         <li class="ms-3"><a href="https://www.facebook.com/brice.byilingiro/"><img class="facebook" src="./assets/images/facebook.svg" height="30"></a></li>
                         <li class="ms-3"><a href="https://www.linkedin.com/in/brice-ali-byiringiro-ab1182254/"><img class="linkedin" src="./assets/images/linkedin.svg" height="30"></a></li>
-                        <li class="ms-3"><a href="https://www.instagram.com/brice_ali121/"><img class="instagram" src="./assets/images/instagram.svg" height="30"></a></li>
+                        <li class="ms-3"><a href="https://www.instagram.com/brice_ali121/"><img class="instagram" src="./assets/images/instagram.png" height="30"></a></li>
                         <li class="ms-3"><a href="https://github.com/Brice-art"><img class="github" src="./assets/images/github.svg" height="30"></a></li>
                     </ul>
                 </footer>
